--- a/trunk/CR_ImportNamespace/CR_ImportNamespace/CR_ImportNamespace.csproj
+++ b/trunk/CR_ImportNamespace/CR_ImportNamespace/CR_ImportNamespace.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\Documents\DevExpress\IDE Tools\Community\Plugins\</OutputPath>
+    <OutputPath>..\..\..\..\DxVcs\CR\2012.1\Bin\PlugIns\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
