--- a/trunk/DX_StackNav/DX_StackNav/DX_StackNav.vbproj
+++ b/trunk/DX_StackNav/DX_StackNav/DX_StackNav.vbproj
@@ -66,7 +66,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.DXCore.Controls.Utils.v6.3" />
-    <Reference Include="DevExpress.DXCore.Parser, Version=11.2.10.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.DXCore.Parser, Version=11.2.10.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
