--- a/trunk/Impromptu/Impromptu/Impromptu.csproj
+++ b/trunk/Impromptu/Impromptu/Impromptu.csproj
@@ -98,7 +98,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="RunMethod.png" />
+    <EmbeddedResource Include="RunMethod.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
