--- a/trunk/CR_INotifyPropChangeRename/CR_INotifyPropChangeRename/CR_INotifyPropChangeRenameVSIX.csproj
+++ b/trunk/CR_INotifyPropChangeRename/CR_INotifyPropChangeRename/CR_INotifyPropChangeRenameVSIX.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
