--- a/CR_DeclareClassInProject/CR_DeclareClassInProject/CR_DeclareClassInProject.vbproj
+++ b/CR_DeclareClassInProject/CR_DeclareClassInProject/CR_DeclareClassInProject.vbproj
@@ -139,6 +139,11 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\Common\Graphics\CR-Plug-in.png">
+      <Link>CR-Plug-in.png</Link>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
