--- a/trunk/CR_EnforceNamingConventions/CR_EnforceNamingConventions/CR_EnforceNamingConventions.csproj
+++ b/trunk/CR_EnforceNamingConventions/CR_EnforceNamingConventions/CR_EnforceNamingConventions.csproj
@@ -63,6 +63,11 @@
       <DependentUpon>PlugIn1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\Common\Graphics\CR-Plug-in.png">
+      <Link>CR-Plug-in.png</Link>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
